 cnp-pci-dss-1.3.3-egress-agtxc14.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-pci-dss-1.3.3-egress-u8mf-48
  namespace: kube-system
spec:
  description: "This policy will allow outbound connection using kube-dns in port 53"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 5848cb99f
      k8s-app: cilium-gke-node-init
      pod-template-generation: 1
  egress:
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
  namespace: kube-system
